$Id$

version ? (????-??-??)

  - contrib/daemon/gentoo-init: small fixes (Mariusz Szulerecki)
  - lmsd/oident: use lower case'd node names (alec)
  - added powerdns support (Dariusz Kowalczyk/Jan Gancarczyk)
  - Userpanel: added possibility to print many invoices with one click (alec)
  - unified pdf invoices in Userpanel and LMS-UI (alec)
  - changed MySQL tables engine to InnoDB (Dariusz Kowalczyk)
  - BTS#0000812: fixed date filter for Cash Import History (alec)
  - lmsd/payments: fixed buffer overflow in quarterday calculations (alec)
  - lmsd/payments: BTS#0000810 - fixed check_invoices option (alec)
  - added deadline date (paytime) for debit notes (alec)
  - added invoices/paytype, invoices/paytime and notes/paytime options (alec)
  - added per-division paytime and paytype (alec)
  - allow finances operation description to be longer than 255 characters (alec)
  - lib/pdf.php: fixed display of pdf document in IE8 (http://support.microsoft.com/kb/316431) (Grzegorz Chwesewicz)

version 1.11.9 Moloc (2009-10-28):
 
  - BTS#0000794: fixed postfix configuration for MySQL (alec)
  - improved performance of bank account fetching (alec)
  - added contrib/bin cash-import scripts for BPH, BZ WBK and PEKAO
    banks (Dariusz Kowalczyk)
  - fixed 'nas' view definition (alec)
  - added Configuration -> Import Sources (alec)
  - added import source filter for balance sheet report (alec)
  - added Cash Import History report (alec)
  - BTS#0000796: fixed nbtscan use (alec)
  - POSIX Regex functions (deprecated in PHP-5.3) replaced with PCRE/String (alec)
  - LMS::GetCache(): fixed serious bug connected with bad assumption that
    isset() returns false when key is not set (chilan)
  - BTS#0000797: fixed excluded_networks in lms-traffic-logiptables (alec)
  - lmsd: added --pidfile option (Jerzy Kolosowski)
  - lmsd: fixed sigfault in dns module (Jerzy Kolosowski)
  - lmsd: fixed bug in str_replace function (Jerzy Kolosowski)