@@ -163,13 +163,17 @@ class LMSDB_driver_mysql extends LMSDB_common
 
 	function _driver_begintrans()
 	{
-		// MyISAM nie obsługuje transakcji
-		return TRUE;
+		return $this->Execute('BEGIN');
 	}
 
 	function _driver_committrans()
 	{
-		return TRUE;
+		return $this->Execute('COMMIT');
+	}
+	
+	function _driver_rollbacktrans()
+        {
+	        return $this->Execute('ROLLBACK');
 	}
 
 	function _driver_locktables($table, $locktype=null)
